# pop-web/src/app/openapi/api/terminology.serviceInterface.ts
@@ -1,0 +1,32 @@
+/**
+ * POP API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { HttpHeaders }                                       from '@angular/common/http';
+
+import { Observable }                                        from 'rxjs';
+
+import { CodedConceptSchema } from '../model/models';
+
+
+import { Configuration }                                     from '../configuration';
+
+
+
+export interface TerminologyServiceInterface {
+    defaultHeaders: HttpHeaders;
+    configuration: Configuration;
+
+    /**
+     * Get Terminology Concepts
+     * 
+     * @param terminology 
+     */
+    getTerminologyConcepts(terminology: string, extraHttpRequestParams?: any): Observable<Array<CodedConceptSchema>>;
+
+}
